Fri Sep 15 14:21:25 1995  Theodore Y. Ts'o  <tytso@dcl>

	* cpw.c: Add DES_CBC_MD5 and DES_CBC_CRC with the V4 salt as
		default key/salt tuples to be added.  (Once proven's DES_*
		folding code is implemented, we can shorten this list.)
		Eventually, this list should be read in from kdc.conf.

Thu Sep  7 20:41:24 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* loadv4.c (load_v4db): Provide a dummy routine if krb4
		compatibility is not compiled in. 

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * cpw.c, dump.c, dumpv4.c, kdb5_edit.c, loadv4.c : 
		s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * cpw.c, dump.c, dumpv4.c, kdb5_edit.c, loadv4.c : Remove krb5_enctype 
		references, and replace with krb5_keytype where appropriate.

Fri Aug 25 17:37:33 EDT 1995	Paul Park	(pjpark@mit.edu)
	* dumpv4.c - Fix handle_keys().  It was trying to recreate work that
		has already been done.
	* Makefile.in, .Sanitize, loadv4.c, kdb5_ed_ct.ct - Add lddb4, the
		command to load a v4 dump file.  This is basically, kdb5_
		convert reconstituted to fit within the framework of kdb5_edit.

Thu Aug 24 19:28:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Mon Aug 21 16:45:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* dump.c - Completely rework this logic to support old (e.g. Beta 5
		and previous) dump format and new dump format using the same
		commands.  This is differentiated by using the "-old" command
		qualifier.

	* kdb5_edit.M - Add description of -R and -s.  Remove "ascii represen-
		tation of a decimal number".  Remove "Bugs".

Fri Aug 18 17:06:06 EDT 1995	Paul Park	(pjpark@mit.edu)

	* ss_wrapper.c - Change sense of fgets() check so scripts work.


Tue Aug 15 14:22:50 EDT 1995	Paul Park	(pjpark@mit.edu)

	* kdb5_edit.c, ss_wrapper.c, cpw.c, kdb5_edit.h - Add support for
		-s scriptfile and fix up assorted gcc -Wall complaints.

